<resources>
    <string name="app_name">News</string>
    <string name="title_breaking_news">Breaking News</string>
    <string name="title_favorites_news">Favorites News</string>
    <string name="title_search_news">Search News</string>
    <string name="title_article">Article</string>

    <string name="published_at">PUBLISHED AT</string>
    <string name="description">DESCRIPTION</string>
    <string name="title">TITLE</string>
    <string name="source">SOURCE</string>

    <string name="Article_Saved_uccessfly">Article Saved Successfly</string>
    <string name="An_error_occured">An error occurred: %1$s</string>
    <string name="Successfully_deleted_article">Successfully deleted article</string>
    <string name="No_Internet_Connection">No Internet Connection</string>
    <string name="Network_Failure">Network Failure</string>
    <string name="Conversion_Error">Conversion Error</string>



</resources>